style(frontend): fix jumping-text inline display

--- a/frontend/src/app/components/jumping-text/jumping-text.component.scss
+++ b/frontend/src/app/components/jumping-text/jumping-text.component.scss
@@ -1,9 +1,11 @@
 :host {
-  display: inline;
+  display: inline-block;
 }
 
 .jumping-text {
   cursor: default;
+  display: inline-block;
+  white-space: nowrap;
 
   .letter {
     display: inline-block;
